--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
